feature-test: update and add all feature